--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body
 {
-margin: 0;
-background-color: #303030;
-color: #ffffff;
+background-image: linear-gradient(to right, rgb(49, 51, 56) , rgb(77, 77, 77));
+color: #cccccc;
 font-family: 'Josefin Sans', sans-serif;
 font-size: 20px;
+text-shadow: 2px 2px 5px rgba(0, 70, 161, 0.808);
 }
 
 h1.logo
@@ -21,23 +21,51 @@ h1.logo
   font-family: 'Josefin Sans', sans-serif;
   font-size: 70px;
   margin-top: 10px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   text-align: center;
 }
 
 
 #leftPanel
 {
-  width: 600px;
-  height: 600px;
-  margin-top: 50px;
-  margin-bottom: 100px;
-  margin-left: 50px;
-
+  width: 34%;
+  height: 90%;
+  margin-left: 2%;
   text-align: center;
-  display: block;
-  background-color: #000028;
-  float: left;
+  display: inline-grid;
+  background-color: #1b1d1f;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+#rightPanel
+{
+  width: 60%;
+  height: 90%;
+  margin-left: 2%;
+  padding-top: 1%;
+  text-align: center;
+  font-size: 30px;
+  display: inline-grid;
+  background-color: #1b1d1f;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+#panelElement
+{
+  margin-top: 5%;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-bottom: 5%;
+  padding-top: 1%;
+  font-size: 30px;
+  display: inline-grid;
+  background-image: linear-gradient(to right, rgba(11, 49, 145, 0.671) , rgba(45, 0, 97, 0.651));
+  border: 5px solid #0b1e31;
+  border-radius: 5px;
+  border-style: outset;
+
 }
 
 #map
@@ -47,6 +75,8 @@ h1.logo
   margin-right: 20px;
   margin-bottom: 20px;
   background-color: #909090;
+  border: 1px solid #909090;
+  border-radius: 5px;
 }
 
 .class
@@ -58,6 +88,8 @@ h1.logo
   display: inline-block;
   text-align: center;
   background-color: #303030;
+  border: 3px solid #303030;
+  border-style: outset;
 }
 
 .class:hover
@@ -73,7 +105,10 @@ h1.logo
   margin-bottom: 10px;
   display: inline-block;
   text-align: center;
+  word-wrap: break-word;
   background-color: #123666;
+  border: 3px solid #303030;
+  border-style: outset;
 }
 
 .object:hover
@@ -81,58 +116,42 @@ h1.logo
   background-color: #456999;
 }
 
-#rightPanel
-{
-  width: 700px;
-  height: 600px;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  margin-left: 100px;
-  font-size: 20px;
-  display: block;
-  background-color: #330100;
-  float: left;
-  text-align: center;
-}
-
-#panelElement
-{
-  margin-top: 20px;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  font-size: 30px;
-  display: block;
-  background-color: #123456;
-}
-
 #lists
 {
-  margin-left: 5px;
-  margin-right: 5px;
-  width: 183px;
+  width: 28%;
   font-size: 20px;
+  margin-bottom: 2%;
   text-align: center;
-  display: inline-block;
-  float: left;
-  background-color: #123456;
+  display: inline-grid;
+  background-color: #123456c4;
+  border: 3px solid #123456c4;
+  border-radius: 5px;
+  padding-bottom: 1%;
+  font-size: 20px;
+
 }
 
 .listElem
 {
-  margin-left: 5px;
-  margin-right: 5px;
-  background-color: #909090;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-bottom: 2%;
+  background-color: #686868;
+  font-size: 20px;
 }
 
 #day
 {
-  margin-top: 20px;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 120px;
+  margin-top: 3%;
+  margin-bottom: 2%;
+  /* margin-left: 1%;
+  margin-right: 1%; */
+  width: 18%;
+  font-size: 20px;
   text-align: center;
-  display: inline-block;
-  float: left;
-  background-color: #8e2a00;
+  display: inline-grid;
+  background-image: linear-gradient(to right, rgba(128, 0, 0, 0.719) , rgba(212, 9, 2, 0.644));
+  border: 1px solid #961c1c;
+  border-radius: 5px;
+  padding-bottom: 1%;
 }
