--- a/style.css
+++ b/style.css
@@ -1,30 +1,23 @@
 body
 {
-background-image: linear-gradient(to right, rgb(49, 51, 56) , rgb(77, 77, 77));
+background-image: linear-gradient(to right, rgb(123, 125, 129) , rgb(77, 77, 77));
 color: #cccccc;
 font-family: 'Josefin Sans', sans-serif;
 font-size: 20px;
-text-shadow: 2px 2px 5px rgba(0, 70, 161, 0.808);
+text-shadow: 2px 2px 5px rgba(48, 75, 110, 0.808);
 }
 
 h1.logo
 {
   font-family: 'Josefin Sans', sans-serif;
   font-size: 70px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 1%;
   text-align: center;
-}
+  background-color: #1b1d1f;
 
-#zegar
-{
-  font-family: 'Josefin Sans', sans-serif;
-  font-size: 70px;
-  margin-top: 10px;
-  /* margin-bottom: 10px; */
-  text-align: center;
 }
-
 
 #leftPanel
 {
@@ -65,7 +58,7 @@ h1.logo
   border: 5px solid #0b1e31;
   border-radius: 5px;
   border-style: outset;
-
+  
 }
 
 #map
@@ -128,11 +121,15 @@ h1.logo
   border-radius: 5px;
   padding-bottom: 1%;
   font-size: 20px;
-
+  
 }
 
-.listElem
+.listBackground
 {
+  list-style-type: none;
+  margin: 0;
+  /* padding: 4px; */
+  overflow: hidden;
   margin-left: 2%;
   margin-right: 2%;
   margin-bottom: 2%;
@@ -140,18 +137,25 @@ h1.logo
   font-size: 20px;
 }
 
+li {
+  float: left;
+}
+
+li:hover
+{
+  color: #1c3296;
+}
+
 #day
 {
   margin-top: 3%;
   margin-bottom: 2%;
-  /* margin-left: 1%;
-  margin-right: 1%; */
   width: 18%;
   font-size: 20px;
   text-align: center;
   display: inline-grid;
-  background-image: linear-gradient(to right, rgba(128, 0, 0, 0.719) , rgba(212, 9, 2, 0.644));
-  border: 1px solid #961c1c;
+  background-color: #123456c4;
+  border: 1px solid #1c1e96;
   border-radius: 5px;
   padding-bottom: 1%;
 }
