--- a/style.css
+++ b/style.css
@@ -36,13 +36,17 @@ h1.logo
   width: 60%;
   height: 90%;
   margin-left: 2%;
+  margin-bottom: 2%;
   padding-top: 1%;
+  padding-bottom: 3%;
   text-align: center;
   font-size: 30px;
   display: inline-grid;
   background-color: #1b1d1f;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
+  border: 5px solid #0b1e31;
+  border-radius: 5px;
+  border-style: outset;
 }
 
 #panelElement
@@ -54,7 +58,7 @@ h1.logo
   padding-top: 1%;
   font-size: 30px;
   display: inline-grid;
-  background-image: linear-gradient(to right, rgba(11, 49, 145, 0.671) , rgba(45, 0, 97, 0.651));
+  background-image: linear-gradient(to right, rgba(11, 49, 145, 0.671) , #2c5a85c4);
   border: 5px solid #0b1e31;
   border-radius: 5px;
   border-style: outset;
@@ -72,7 +76,7 @@ h1.logo
   border-radius: 5px;
 }
 
-.class
+.room
 {
   width: 60px;
   height: 50px;
@@ -85,12 +89,12 @@ h1.logo
   border-style: outset;
 }
 
-.class:hover
+.room:hover
 {
   background-color: #636363;
 }
 
-.object
+.specialRoom
 {
   width: 60px;
   height: 50px;
@@ -104,31 +108,26 @@ h1.logo
   border-style: outset;
 }
 
-.object:hover
-{
-  background-color: #456999;
-}
-
-#lists
+.lists
 {
   width: 28%;
   font-size: 20px;
   margin-bottom: 2%;
   text-align: center;
   display: inline-grid;
-  background-color: #123456c4;
-  border: 3px solid #123456c4;
+  background-color: #041525c4;
+  border: 3px solid #001120c4;
   border-radius: 5px;
   padding-bottom: 1%;
   font-size: 20px;
   
 }
 
-.listBackground
+ul
 {
   list-style-type: none;
   margin: 0;
-  /* padding: 4px; */
+  padding: 4px;
   overflow: hidden;
   margin-left: 2%;
   margin-right: 2%;
@@ -137,25 +136,29 @@ h1.logo
   font-size: 20px;
 }
 
-li {
-  float: left;
-}
-
 li:hover
 {
   color: #1c3296;
 }
 
-#day
+#plan
 {
-  margin-top: 3%;
-  margin-bottom: 2%;
-  width: 18%;
-  font-size: 20px;
-  text-align: center;
-  display: inline-grid;
-  background-color: #123456c4;
-  border: 1px solid #1c1e96;
-  border-radius: 5px;
-  padding-bottom: 1%;
+  display: grid;
+  width: auto auto auto auto auto auto;
+  margin: 2%;
+
+}
+
+th
+{
+  padding: 1%;
+  background-color: #0b1e31;
+}
+
+td
+{
+  font-size: 25px;
+  padding: 10px;
+  background-color: #2c5a85c4;
+  word-wrap: break-word;
 }
