2nd version of the layout + small fixes

--- a/css/fontello-codes.css
+++ b/css/fontello-codes.css
@@ -1,9 +1,4 @@
 
-.icon-linkedin:before { content: '\e800'; } /* '' */
-.icon-gplus:before { content: '\e801'; } /* '' */
-.icon-facebook:before { content: '\e802'; } /* '' */
-.icon-github-circled:before { content: '\e803'; } /* '' */
-.icon-user:before { content: '\e804'; } /* '' */
-.icon-briefcase:before { content: '\e805'; } /* '' */
-.icon-laptop:before { content: '\e806'; } /* '' */
-.icon-mail-alt:before { content: '\f0e0'; } /* '' */
+.icon-emo-coffee:before { content: '\e808'; } /* '' */
+.icon-toilet:before { content: '\e83b'; } /* '' */
+.icon-coffee:before { content: '\f0f4'; } /* '' */
