--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?34546197');
-  src: url('../font/fontello.eot?34546197#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?34546197') format('woff2'),
-       url('../font/fontello.woff?34546197') format('woff'),
-       url('../font/fontello.ttf?34546197') format('truetype'),
-       url('../font/fontello.svg?34546197#fontello') format('svg');
+  src: url('../font/fontello.eot?49947740');
+  src: url('../font/fontello.eot?49947740#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?49947740') format('woff2'),
+       url('../font/fontello.woff?49947740') format('woff'),
+       url('../font/fontello.ttf?49947740') format('truetype'),
+       url('../font/fontello.svg?49947740#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,51 +15,46 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?34546197#fontello') format('svg');
+    src: url('../font/fontello.svg?49947740#fontello') format('svg');
   }
 }
 */
-
+ 
  [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
   speak: none;
-
+ 
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
   margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
-
+ 
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
-
+ 
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
-
+ 
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
   margin-left: .2em;
-
+ 
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
-
+ 
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+ 
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
-
-.icon-linkedin:before { content: '\e800'; font-size: 70px; margin-top: 35px;} /* '' */
-.icon-gplus:before { content: '\e801'; font-size: 70px; margin-top: 40px;} /* '' */
-.icon-facebook:before { content: '\e802'; font-size: 70px; margin-top: 35px;} /* '' */
-.icon-github-circled:before { content: '\e803'; font-size: 70px; margin-top: 35px;} /* '' */
-.icon-user:before { content: '\e804'; font-size: 70px; margin-top: 35px;} /* '' */
-.icon-briefcase:before { content: '\e805'; font-size: 70px; margin-top: 35px;} /* '' */
-.icon-laptop:before { content: '\e806'; font-size: 70px; margin-top: 35px;} /* '' */
-.icon-mail-alt:before { content: '\f0e0'; font-size: 70px; margin-top: 35px;} /* '' */
+ 
+.icon-emo-coffee:before { content: '\e808'; } /* '' */
+.icon-toilet:before { content: '\e83b'; } /* '' */
+.icon-coffee:before { content: '\f0f4'; } /* '' */
