--- a/styleH.css
+++ b/styleH.css
@@ -1,7 +1,7 @@
 body
 {
 background-image: linear-gradient(to right, rgb(123, 125, 129) , rgb(77, 77, 77));
-color: #cccccc;
+color: #d6d4d4;
 font-family: 'KoHo', sans-serif;
 font-size: 20px;
 text-shadow: 2px 2px 5px rgba(48, 75, 110, 0.808);
@@ -15,8 +15,10 @@ h1.logo
   margin-bottom: 20px;
   padding: 1%;
   text-align: center;
-  background-color: #1b1d1f;
-
+  color: #0c014d;
+  background-color: #bdbfc4;
+  border: 5px;
+  border-radius: 5px;
 }
 
 #leftPanel
@@ -26,10 +28,10 @@ h1.logo
   margin-left: 2%;
   text-align: center;
   display: inline-grid;
-  background-color: #1b1d1f;
+  background-color: #3c3d3d;
+  box-shadow: 0 4px 8px 0 rgba(41, 40, 41, 0.685), 0 6px 20px 0 rgba(161, 159, 159, 0.19);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border: 5px solid #0b1e31;
+  border: 5px solid #393a3a;
   border-radius: 5px;
   border-style: outset;
 
@@ -46,9 +48,9 @@ h1.logo
   text-align: center;
   font-size: 30px;
   display: inline-grid;
-  background-color: #1b1d1f;
+  background-color: #3c3d3d;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border: 5px solid #0b1e31;
+  border: 5px solid #393a3a;
   border-radius: 5px;
   border-style: outset;
 }
@@ -62,8 +64,8 @@ h1.logo
   padding-top: 1%;
   font-size: 30px;
   display: inline-grid;
-  background-image: linear-gradient(to right, rgba(11, 49, 145, 0.671) , #2c5a85c4);
-  border: 5px solid #0b1e31;
+  background-image: linear-gradient(to right, rgba(23, 3, 202, 0.671) , #d4084c59);
+  border: 5px solid #6c2c85c4;
   border-radius: 5px;
   border-style: outset;
   
@@ -75,7 +77,7 @@ h1.logo
   margin-left: 20px;
   margin-right: 20px;
   margin-bottom: 20px;
-  background-color: #909090;
+  background-color: #bdbfc4;
   /* border: 1px solid #909090;
   border-radius: 5px; */
 }
@@ -107,7 +109,7 @@ h1.logo
   display: inline-block;
   text-align: center;
   word-wrap: break-word;
-  background-color: #123666;
+  background-color: #91072ac4;
   border: 3px solid #303030;
   border-style: outset;
 }
@@ -132,16 +134,17 @@ ul
   margin: 0;
   padding: 4px;
   overflow: hidden;
+  color: #131212;
   margin-left: 2%;
   margin-right: 2%;
   margin-bottom: 2%;
-  background-color: #686868;
-  font-size: 20px;
+  background-color: #bdbfc4;
+  font-size: 20px bold;
 }
 
 li:hover
 {
-  color: #1c3296;
+  color: #e0082c;
 }
 
 .button
@@ -160,7 +163,7 @@ li:hover
 
 .button:hover
 {
-  background-color: #961c86;
+  background-color: #ce8a0d;
 }
 
 #plan
@@ -168,19 +171,21 @@ li:hover
   display: grid;
   width: auto auto auto auto auto auto;
   margin: 2%;
+  /* background-color: #2b2527; */
 
 }
 
 th
 {
   padding: 1%;
-  background-image: linear-gradient(to right, rgba(11, 49, 145, 0.671) , #334f77);
+  background-color: #3207cec4
+  /* background-image: linear-gradient(to right, #c78305c4 , rgba(120, 8, 185, 0.479) ); */
 }
 
 td
 {
   font-size: 25px;
   padding: 10px;
-  background-color: #406194;
+  background-color: #58556b86;
   word-wrap: break-word;
 }
